--- a/mandoc.1
+++ b/mandoc.1
@@ -954,7 +954,7 @@ The
 macro uses the legacy
 .Xr man 7
 date format
-.Dq yyyy-dd-mm .
+.Dq yyyy-mm-dd .
 Consider using the conventional
 .Xr mdoc 7
 date format
