--- a/mdoc.7
+++ b/mdoc.7
@@ -223,9 +223,9 @@ For the second, function calls (sections 2, 3, 9):
 \&.Lb libname \e" unless the functions are in libc
 \&.In header.h
 \&.Vt extern const char *global;
-\&.Ft "char *"
+\&.Ft char *
 \&.Fn foo "const char *src"
-\&.Ft "char *"
+\&.Ft char *
 \&.Fn bar "const char *src"
 .Ed
 .Pp
