mention new catman -v option

--- a/man.options.1
+++ b/man.options.1
@@ -1,6 +1,6 @@
-.\"	$Id$
+.\" $Id$
 .\"
-.\" Copyright (c) 2017 Ingo Schwarze <schwarze@openbsd.org>
+.\" Copyright (c) 2017, 2025 Ingo Schwarze <schwarze@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -1113,7 +1113,8 @@ print version number
 verbose mode
 .br
 .Nm catman :
-.Fx Pq March 15, 1995
+.Fx Pq March 15, 1995 ,
+.No mandoc Pq June 30, 2025
 .br
 .Nm makewhatis :
 .man15g
