Signal handling for catman(8). This is useful for doing a clean shutdown, including printing the summary messages at the end, when we get SIGHUP, SIGINT, SIGPIPE, or SIGTERM. Besides, when we catch SIGCHLD, we no longer need to try sendmsg(3), which avoids SIGPIPE in some cases.  Since the child may die between the time we check whether we got a signal and time we issue the next sendmsg(3), it does not always prevent SIGPIPE, so SIGPIPE handling is still necessary.

--- a/catman.8
+++ b/catman.8
@@ -157,6 +157,15 @@ A call to
 returned
 .Dv NULL ,
 meaning that the iteration failed before being complete.
+.It FATAL: mandocd child died: got Ar SIGNAME
+This message appears if
+.Nm
+gets the
+.Dv SIGCHLD
+or
+.Dv SIGPIPE
+signal, most likely due to a fatal bug in
+.Xr mandocd 8 .
 .It FATAL: Sy sendmsg : Ar reason
 The file descriptors needed to process one of the manual pages
 could not be sent to
@@ -164,6 +173,15 @@ could not be sent to
 for example because
 .Xr mandocd 8
 could not be started or died unexpectedly.
+.It FATAL: signal Ar SIGNAME
+This message appears if
+.Nm
+gets a
+.Dv SIGHUP ,
+.Dv SIGINT ,
+or
+.Dv SIGTERM
+signal, for example because the user deliberately killed it.
 .El
 .Pp
 Some non-fatal errors cause a single subdirectory to be skipped.
