use Anthony's full name in copyright line; from bentley@

--- a/man.7
+++ b/man.7
@@ -3,7 +3,7 @@
 .\" Copyright (c) 2011-2015, 2017-2020, 2023, 2025
 .\"               Ingo Schwarze <schwarze@openbsd.org>
 .\" Copyright (c) 2009, 2010, 2011, 2012 Kristaps Dzonsons <kristaps@bsd.lv>
-.\" Copyright (c) 2017 Anthony Bentley <bentley@openbsd.org>
+.\" Copyright (c) 2017 Anthony J. Bentley <bentley@openbsd.org>
 .\" Copyright (c) 2010 Joerg Sonnenberger <joerg@netbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
