Kristaps@ deleted tbl_reset() 15 years ago, so delete it here, too.

--- a/mandoc_headers.3
+++ b/mandoc_headers.3
@@ -565,9 +565,8 @@ and the functions
 .Fn tbl_option ,
 .Fn tbl_layout ,
 .Fn tbl_data ,
-.Fn tbl_cdata ,
 and
-.Fn tbl_reset .
+.Fn tbl_cdata .
 .Pp
 When this header is included, the same file should not include
 interfaces of different parsers.
